# dynservice

./: Cargo.toml  README.md  test_app.rs
src/: common.rs  coreobjs.rs  dynservice.rs  lib.rs  registry.rs  search.rs  service.rs  watcher.rs
src/store/: common.rs  lease.rs  mod.rs  store.rs  watcher.rs
tests/: faults.rs  generic.rs
tests/common/: etcd.rs  mod.rs
