[package]
name = "dynservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
etcd-client = "0.7.2"
async-trait = "0.1.51"
snafu = "0.6.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.14"
env_logger = "0.9.0"
tracing = "0.1.28"
futures = "0.3.16"
